--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   </head>
   <body>
     <header>Examen Bloque1</header>
+    <main>
+      <div>
+        <h1>“Miembros del Bootcamp”</h1>
+        <h2 id="BootcampMembers"></h2>
+      </div>
+    </main>
     <footer>created by Mónica Macal at Bootcamp</footer>
     <script src="script.js" async defer></script>
   </body>
