--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div>
         <h1>“Miembros del Bootcamp”</h1>
         <h2 id="BootcampMembers"></h2>
+        <ul id="Cumpleaños"></ul>
       </div>
     </main>
     <footer>created by Mónica Macal at Bootcamp</footer>
