--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <title>Examen Bloque 1</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>Examen Bloque1</header>
+    <header>Practice Test 1</header>
     <main>
       <div>
         <h1>“Miembros del Bootcamp”</h1>
         <h2 id="BootcampMembers"></h2>
-        <ul id="Cumpleaños"></ul>
+        <li id="Cumpleaños"></li>
       </div>
     </main>
-    <footer>created by Mónica Macal at Bootcamp</footer>
+    <footer>Created by Mónica Macal at Bootcamp Ajusco 2021</footer>
     <script src="script.js" async defer></script>
   </body>
 </html>
